* Dialer (ECCP): add a new request 'getchanvars'. This request lists the channel
  variables of the call currently handled by the agent.
* Agent Console: expose the Uniqueid of the linked call as an additional 
  variable for External URL.
* Login Logout: fix issue of report export displaying only a single page.
* Login Logout: add consistency checks on audit records to counter the situation
  where an abnormal termination of the dialer leaves unclosed audit records.
  Inconsistent records are now displayed as CORRUPTED instead of adding invalid
  values as if they were valid ONLINE records.
* Dialer: fix inability to record scheduled calls. Now the dialer will use a
  special context to enable recording if the campaign queue recorded calls.
* Dialer: set CALLERID(num) in OriginateResponse handler in order to ensure the
  CDR has a meaningful source field value. Fixes Elastix bug #1411.
* Trunks Used per Hour: core query method rewritten to use SQL parameters. SQL
  was reimplemented to use more efficient grouping. HTML formatting moved to 
  index.php. Trunk filter now allows report on calls from all trunks.
* Agents Connection Time: removed. This report is now essentially identical to
  Login Logout.
* Login Logout: complete rewrite. This rewrite takes advantage of the updated
  Elastix API for paloSantoGrid available since elastix-framework 2.2-18. The 
  custom code for calendars was replaced with standard date controls. Most 
  importantly, the SQL query was considerably simplified for readability, and in
  the process, fixes the calculation of total session time. Finally, the 
  filtering by incoming queue from Agents Connection Time was added to this 
  module. Part of fix for Elastix bug #1409.
* Campaign Out: reactivate a finished campaign if calls are added to it
* Campaign Out: Cleanup of outgoing campaign library:
  Replace all uses of ereg with preg_match
  Removed some dead code
  Replace uses of DBCAMPO with proper SQL parameters