@@ -1,3 +1,6 @@
+* Agent Console: use the new getchanvars request to add the list of channel
+  variables to the ones available in an external URL. This allows variables set
+  via custom contexts or AGIs to be used to drive external URLs.
 * Dialer (ECCP): add a new request 'getchanvars'. This request lists the channel
   variables of the call currently handled by the agent.
 * Agent Console: expose the Uniqueid of the linked call as an additional 
